# kifparser

./: DEVNOTES.md  README.md  setup.cfg  tox.ini
kifparser/: __init__.py  grammar.py  kifparser.py  ontology.py
tests/: __init__.py  test_kifparser.py
