[metadata]
name = kifparser
version = 0.0.0
description = SUO-KIF parser
license = Apache License 2.0
author = Alexey Dobrov
author_email = alexey.dobrov@quantori.com
url = https://github.com/quantori/kifparser
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = kifparser
install_requires =
    aiire
python_requires = >=3.6
